methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:1: error: Missing closing brace `}' assumed here
def dogHouse() {
^MethodsDogHouse:1: error: expected class or object definition
def dogHouse() {
^